# chip8-rs

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  README.org
games/: README.md
info/: chip8.texi
src/: assembler.rs  disassembler.rs  display.rs  input.rs  instruction.rs  interpreter.rs  lib.rs  timer.rs  util.rs
src/assembler/: mod.rs  parse.rs
tests/: disasm_loop.rs
