[package]
name = "chip8"
version = "0.1.0"
authors = ["Ian Johnson <ianprime0509@gmail.com>"]

[dependencies]
failure = "0.1.1"
failure_derive = "0.1.1"
enum_primitive = "0.1.1"
num = "0.1.41"
log = "0.4.1"
rand = "0.4.2"
time = "0.1.39"
clap = "2.29.2"
env_logger = "0.5.0"
sdl2 = "0.31.0"
maplit = "1.0.1"
combine = "2.5.2"
